<resources>
    <string name="app_name">EyeOfKGB</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="directory">Directory</string>
    <string name="daily_static">Daily Statistics</string>
    <string name="total_static">Total Statistics</string>
    <string name="name_total_st">Name</string>
    <string name="hits_total_st">Hits</string>
    <string name="eye_of_kgb">EyeOfKGB</string>
    <string name="comp_name">БыдлоКОдеры</string>
    <string name="commit_btn_txt">Commit</string>
    <string name="date_daily_table">Date</string>
    <string name="static_total_sum">Total :</string>
    <string name="url_text">Url</string>
    <string name="period_from_txt">Period from</string>
    <string name="period_to_text">to</string>
    <string name="communicate">Communicate</string>
    <string name="contact">Contact</string>
</resources>
