<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/total_static"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/total_static" />
        <item
            android:id="@+id/daily_static"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/daily_static" />
        <item
            android:id="@+id/directory"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/directory" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>