<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/size_dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_marginLeft="20dp"
            android:text="Url"
            android:textSize="@dimen/size_txt_medium" />

        <Spinner
            android:id="@+id/daily_static_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contextClickable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPearson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutUrl">

        <TextView
            android:layout_width="@dimen/size_dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/name_total_st"
            android:textSize="@dimen/size_txt_medium" />

        <Spinner
            android:id="@+id/daily_static_pearson"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contextClickable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayoutPearson"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Period from"
            android:textSize="@dimen/size_txt_small" />

        <TextView
            android:id="@+id/date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="setDate"
            android:text="12.02.2015"
            android:textSize="@dimen/size_txt_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="to"
            android:textSize="@dimen/size_txt_small" />

        <TextView
            android:id="@+id/date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="setDate"
            android:text="20.03.2015"
            android:textSize="@dimen/size_txt_small" />

        <Button
            android:id="@+id/commitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/commit_btn_txt"
            android:textSize="@dimen/size_txt_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/daily_static_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutDate">

        <TableRow
            android:id="@+id/table_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#dcdcdc"
                android:gravity="left"
                android:padding="@dimen/padding_button"
                android:text="@string/date_daily_table"
                android:textColor="#000000"
                android:textSize="@dimen/size_txt_medium" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#d3d3d3"
                android:gravity="center"
                android:padding="@dimen/padding_button"
                android:text="@string/hits_total_st"
                android:textColor="#000000"
                android:textSize="@dimen/size_txt_medium" />
        </TableRow>

    </LinearLayout>

    <ListView
        android:id="@+id/daily_list_static"
        android:layout_marginTop="@dimen/list_item_padding_tip"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_above="@+id/linear_layout_total"
        android:layout_below="@+id/daily_static_table"
        android:divider="@android:color/transparent"
        android:dividerHeight="1.0sp"/>

    <LinearLayout
        android:id="@+id/linear_layout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.73"
            android:text="Total :"
            android:textSize="@dimen/size_txt_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="5555"
            android:textSize="@dimen/size_txt_medium" />

    </LinearLayout>
</RelativeLayout>